printscript-validator/src/test/resources/1.1/invalid-type-readInput-argument/main.ps
let x: string = readInput(true);